--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 anyio==3.6.2
+bcrypt==4.0.1
 beanie==1.17.0
+certifi==2022.12.7
+cffi==1.15.1
 click==8.1.3
 colorama==0.4.6
+cryptography==39.0.1
 dnspython==2.3.0
 fastapi==0.92.0
 h11==0.14.0
 idna==3.4
+jwt==1.3.1
 lazy-model==0.0.5
 motor==3.1.1
+pycparser==2.21
 pydantic==1.10.4
 pymongo==4.3.3
+python-dotenv==1.0.0
 sniffio==1.3.0
 starlette==0.25.0
 toml==0.10.2
-typing-extensions==4.5.0
+typing_extensions==4.5.0
 uvicorn==0.20.0
