--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,11 @@ dnspython==2.3.0
 fastapi==0.92.0
 h11==0.14.0
 idna==3.4
-jwt==1.3.1
 lazy-model==0.0.5
 motor==3.1.1
 pycparser==2.21
 pydantic==1.10.4
+PyJWT==2.6.0
 pymongo==4.3.3
 python-dotenv==1.0.0
 sniffio==1.3.0
